# csvms

./: .gitignore  README.md  algebra.ipynb  index.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: python-testing.yml
csvms/: __init__.py  catalog.py  conf.py  engine.py  exceptions.py  index.rst  schema.py  table.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/csvms/: catalog.html  catalog.md  exceptions.html  exceptions.md  index.html  index.md  schema.html  schema.md  table.html  table.md
examples/: ddl-dml.ipynb  dql-alg.ipynb  dql-algebra.ipynb  dql-joins.ipynb  dql-sql.ipynb  dql.ipynb  indices.ipynb  junções.ipynb  spark.ipynb  sql-dml.ipynb  sql.ipynb
sql/: frutas.sql  lake.sql
sql/locations/: locations.json
tests/: test_joins.py  test_operations.py  test_project.py  test_schema.py
