[tool.poetry]
name = "csvms"
version = "0.1.3"
description = "Comma-separated values management system"
authors = ["Didone <tiago.didone@compasso.com.br>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Didone/csvms"
repository = "https://github.com/Didone/csvms.git"
keywords = ["bootcamp","sql","csv","sgbd","dbms"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
pylint = "^2.13.9"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
